--- a/stories/event-storming/order-domain.yaml
+++ b/stories/event-storming/order-domain.yaml
@@ -1,254 +1,295 @@
-title: "Order Domain - Event Storming"
+title: Order Domain - Event Storming
 version: 2
 type: event-storming
-
-domain: "Order Management"
-
+domain: Order Management
 actors:
   - id: customer
-    name: "Customer"
-    icon: "👤"
-    description: "Places and tracks orders"
-    
+    name: Customer
+    icon: 👤
+    description: Places and tracks orders
   - id: warehouse
-    name: "Warehouse"
-    icon: "🏭"
-    description: "Fulfills orders"
+    name: Warehouse
+    icon: 🏭
+    description: Fulfills orders
     external: true
-    
   - id: payment-system
-    name: "Payment System"
-    icon: "💳"
-    description: "Processes payments"
+    name: Payment System
+    icon: 💳
+    description: Processes payments
     external: true
-
 aggregates:
   - id: order
-    name: "Order"
-    description: "Order aggregate root"
-    events: [order-placed, order-confirmed, order-paid, order-shipped, order-delivered]
-    commands: [place-order, confirm-order, ship-order]
-    
+    name: Order
+    description: Order aggregate root
+    events:
+      - order-placed
+      - order-confirmed
+      - order-paid
+      - order-shipped
+      - order-delivered
+    commands:
+      - place-order
+      - confirm-order
+      - ship-order
   - id: cart
-    name: "Shopping Cart"
-    description: "Temporary cart before order"
-    events: [item-added, item-removed, cart-cleared]
-    commands: [add-item, remove-item, checkout]
-
+    name: Shopping Cart
+    description: Temporary cart before order
+    events:
+      - item-added
+      - item-removed
+      - cart-cleared
+    commands:
+      - add-item
+      - remove-item
+      - checkout
 events:
-  # Cart Events
   - id: item-added
-    name: "ItemAddedToCart"
+    name: ItemAddedToCart
     aggregate: cart
     triggeredBy: add-item
-    data: [cartId, productId, quantity, price]
+    data:
+      - cartId
+      - productId
+      - quantity
+      - price
     order: 1
-
   - id: cart-checked-out
-    name: "CartCheckedOut"
+    name: CartCheckedOut
     aggregate: cart
     triggeredBy: checkout
-    data: [cartId, customerId, totalAmount]
+    data:
+      - cartId
+      - customerId
+      - totalAmount
     order: 2
-
-  # Order Events
   - id: order-placed
-    name: "OrderPlaced"
+    name: OrderPlaced
     aggregate: order
     triggeredBy: place-order
-    data: [orderId, customerId, items, totalAmount]
+    data:
+      - orderId
+      - customerId
+      - items
+      - totalAmount
     order: 3
-
   - id: payment-requested
-    name: "PaymentRequested"
+    name: PaymentRequested
     aggregate: order
-    data: [orderId, amount, customerId]
+    data:
+      - orderId
+      - amount
+      - customerId
     order: 4
-
   - id: payment-completed
-    name: "PaymentCompleted"
+    name: PaymentCompleted
     aggregate: order
-    data: [orderId, transactionId, amount]
+    data:
+      - orderId
+      - transactionId
+      - amount
     order: 5
-
   - id: order-confirmed
-    name: "OrderConfirmed"
+    name: OrderConfirmed
     aggregate: order
     triggeredBy: confirm-order
-    data: [orderId, confirmedAt]
+    data:
+      - orderId
+      - confirmedAt
     order: 6
-
   - id: inventory-reserved
-    name: "InventoryReserved"
+    name: InventoryReserved
     aggregate: order
-    data: [orderId, items, warehouseId]
+    data:
+      - orderId
+      - items
+      - warehouseId
     order: 7
-
   - id: order-shipped
-    name: "OrderShipped"
+    name: OrderShipped
     aggregate: order
     triggeredBy: ship-order
-    data: [orderId, trackingNumber, carrier]
+    data:
+      - orderId
+      - trackingNumber
+      - carrier
     order: 8
-
   - id: order-delivered
-    name: "OrderDelivered"
+    name: OrderDelivered
     aggregate: order
-    data: [orderId, deliveredAt, signature]
+    data:
+      - orderId
+      - deliveredAt
+      - signature
     order: 9
-
 commands:
   - id: add-item
-    name: "AddItemToCart"
+    name: AddItemToCart
     actor: customer
     aggregate: cart
-    produces: [item-added]
-
+    produces:
+      - item-added
   - id: checkout
-    name: "Checkout"
+    name: Checkout
     actor: customer
     aggregate: cart
-    produces: [cart-checked-out]
-
+    produces:
+      - cart-checked-out
   - id: place-order
-    name: "PlaceOrder"
+    name: PlaceOrder
     actor: customer
     aggregate: order
-    produces: [order-placed]
-
+    produces:
+      - order-placed
   - id: confirm-order
-    name: "ConfirmOrder"
+    name: ConfirmOrder
     aggregate: order
-    produces: [order-confirmed]
-
+    produces:
+      - order-confirmed
   - id: ship-order
-    name: "ShipOrder"
+    name: ShipOrder
     actor: warehouse
     aggregate: order
-    produces: [order-shipped]
-
+    produces:
+      - order-shipped
 policies:
   - id: request-payment
-    name: "When OrderPlaced, request payment"
+    name: When OrderPlaced, request payment
     trigger: order-placed
     action: request-payment-command
-
   - id: confirm-after-payment
-    name: "When PaymentCompleted, confirm order"
+    name: When PaymentCompleted, confirm order
     trigger: payment-completed
     action: confirm-order
-
   - id: reserve-inventory
-    name: "When OrderConfirmed, reserve inventory"
+    name: When OrderConfirmed, reserve inventory
     trigger: order-confirmed
     action: reserve-inventory-command
-
   - id: notify-customer
-    name: "When OrderShipped, notify customer"
+    name: When OrderShipped, notify customer
     trigger: order-shipped
     action: send-tracking-email
-
 readModels:
   - id: order-summary
-    name: "Order Summary"
-    description: "Customer-facing order view"
-    updatedBy: [order-placed, order-confirmed, order-shipped, order-delivered]
-    consumedBy: [customer]
-
+    name: Order Summary
+    description: Customer-facing order view
+    updatedBy:
+      - order-placed
+      - order-confirmed
+      - order-shipped
+      - order-delivered
+    consumedBy:
+      - customer
   - id: warehouse-queue
-    name: "Warehouse Queue"
-    description: "Orders pending fulfillment"
-    updatedBy: [order-confirmed, order-shipped]
-    consumedBy: [warehouse]
-
+    name: Warehouse Queue
+    description: Orders pending fulfillment
+    updatedBy:
+      - order-confirmed
+      - order-shipped
+    consumedBy:
+      - warehouse
 externalSystems:
   - id: stripe
-    name: "Stripe"
-    description: "Payment processing"
-    produces: [payment-completed]
-    consumes: [payment-requested]
-
+    name: Stripe
+    description: Payment processing
+    produces:
+      - payment-completed
+    consumes:
+      - payment-requested
   - id: warehouse-api
-    name: "Warehouse API"
-    description: "Inventory and fulfillment"
-    produces: [inventory-reserved, order-shipped]
-
+    name: Warehouse API
+    description: Inventory and fulfillment
+    produces:
+      - inventory-reserved
+      - order-shipped
 hotspots:
   - id: payment-timing
-    note: "When exactly should we charge? At checkout or confirmation?"
+    note: When exactly should we charge? At checkout or confirmation?
     type: question
     near: payment-requested
-    raisedBy: "Product Owner"
-
+    raisedBy: Product Owner
   - id: inventory-failure
-    note: "What if inventory reservation fails after payment?"
+    note: What if inventory reservation fails after payment?
     type: risk
     near: inventory-reserved
-    raisedBy: "Tech Lead"
-
+    raisedBy: Tech Lead
   - id: partial-ship
-    note: "Should we support partial shipments?"
+    note: Should we support partial shipments?
     type: opportunity
     near: order-shipped
-    raisedBy: "Business Analyst"
-
+    raisedBy: Business Analyst
 steps:
-  - title: "Order Domain Overview"
-    description: "Event storming for the Order Management domain"
+  - title: Order Domain Overview
+    description: Event storming for the Order Management domain
     zoomLevel: 0.8
     duration: 4000
-
-  - title: "The Happy Path"
-    description: "Customer adds items, checks out, order is placed, paid, confirmed, shipped, and delivered"
+  - title: The Happy Path
+    description: Customer adds items, checks out, order is placed, paid, confirmed, shipped, and delivered
     showEventSequence: true
-    highlightEvents: [item-added, cart-checked-out, order-placed, payment-completed, order-confirmed, order-shipped, order-delivered]
+    highlightEvents:
+      - item-added
+      - cart-checked-out
+      - order-placed
+      - payment-completed
+      - order-confirmed
+      - order-shipped
+      - order-delivered
     zoomLevel: 0.9
     duration: 6000
-
-  - title: "Customer Journey Start"
-    description: "Customer adds items to cart and initiates checkout"
+  - title: Customer Journey Start
+    description: Customer adds items to cart and initiates checkout
     focusAggregate: cart
-    highlightCommands: [add-item, checkout]
-    highlightEvents: [item-added, cart-checked-out]
+    highlightCommands:
+      - add-item
+      - checkout
+    highlightEvents:
+      - item-added
+      - cart-checked-out
     zoomLevel: 1.1
     duration: 5000
-
-  - title: "Order Placement"
-    description: "Cart becomes an Order - the key domain event"
-    highlightEvents: [order-placed]
-    highlightCommands: [place-order]
+  - title: Order Placement
+    description: Cart becomes an Order - the key domain event
+    highlightEvents:
+      - order-placed
+    highlightCommands:
+      - place-order
     zoomLevel: 1.2
     duration: 5000
     narration:
-      speaker: "Domain Expert"
-      message: "OrderPlaced is our pivotal event - everything flows from here"
-
-  - title: "Payment Flow"
-    description: "Order triggers payment request, external system confirms"
-    highlightEvents: [payment-requested, payment-completed]
+      speaker: Domain Expert
+      message: OrderPlaced is our pivotal event - everything flows from here
+  - title: Payment Flow
+    description: Order triggers payment request, external system confirms
+    highlightEvents:
+      - payment-requested
+      - payment-completed
     showPolicies: true
     zoomLevel: 1.1
     duration: 5000
-
-  - title: "Fulfillment Chain"
-    description: "Confirmation triggers inventory, then shipping"
-    highlightEvents: [order-confirmed, inventory-reserved, order-shipped]
+  - title: Fulfillment Chain
+    description: Confirmation triggers inventory, then shipping
+    highlightEvents:
+      - order-confirmed
+      - inventory-reserved
+      - order-shipped
     showPolicies: true
-    zoomLevel: 1.0
+    zoomLevel: 1
     duration: 5000
-
-  - title: "Open Questions"
-    description: "Hotspots from our event storming session"
+  - title: Open Questions
+    description: Hotspots from our event storming session
     showHotspots: true
-    zoomLevel: 1.0
+    zoomLevel: 1
     duration: 6000
     narration:
-      speaker: "Facilitator"
-      message: "These questions need resolution before implementation"
-
-  - title: "Full Event Storm"
-    description: "Complete domain model with all events, commands, and policies"
+      speaker: Facilitator
+      message: These questions need resolution before implementation
+  - title: Full Event Storm
+    description: Complete domain model with all events, commands, and policies
     showPolicies: true
     showHotspots: true
     zoomLevel: 0.7
     duration: 5000
+camera:
+  center:
+    - 0
+    - 0
+  zoom: 1
